Fixed the jumping issue after merge.

--- a/samples/COVID/covid-spfx/src/webparts/covidAdmin/components/CovidAdmin.module.scss
+++ b/samples/COVID/covid-spfx/src/webparts/covidAdmin/components/CovidAdmin.module.scss
@@ -112,20 +112,23 @@
     }
   }
 
-  @include gridBase();
+  .componentGrid {
+    @include gridBase();
 
-  >h1 {
-    @include gridSpan(6, 1);
+    >h1 {
+      @include gridSpan(6, 1);
+    }
+
+    >p {
+      @include gridSpan(8, 1);
+    }
+
+    >div,
+    >table {
+      @include gridSpan(12, 1);
+    }
   }
 
-  >p {
-    @include gridSpan(8, 1);
-  }
-
-  >div,
-  >table {
-    @include gridSpan(12, 1);
-  }
 
   .formRow {
     @include gridSpan(6, 1);
